# J2Preview

./: bun.lockb  dev.sh  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test.py
j2preview/: AnsibleParser.py  __main__.py
j2preview/static/src/css/: global.css
j2preview/templates/: NavBar.html  index.html
j2preview/templates/J2Preview/: J2Preview.html
j2preview/templates/J2Preview/JinjaButtonArray/: JinjaButtonArray.html
j2preview/templates/J2Preview/JinjaInput/: JinjaInput.html
j2preview/templates/J2Preview/JinjaOutput/: JinjaOutput.html
j2preview/templates/J2Preview/YamlInput/: YamlInput.html
